tests/cli/apply/traditional/snapshots/main__cli__apply__traditional__validate_checksum__fails_if_migration_file_content_changed.snap
---
source: tests/cli/apply/traditional/validate_checksum.rs
expression: stderr
---
Error: 
   0: The checksum does not match for migration '[timestamp]_AddAdminUser'.

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
